--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       <section class="main">
         <%= yield %>
       </section>
-      <%# TODO %>
+      <%= render 'layouts/footer' %>
     </section>
   </body>
 </html>
